@@ -123,6 +123,7 @@ Bug Fixes:
     (Issue 87).
  -- @email - Remove unnecessary zeroing of buffers (Issue 80).
  -- @email - Typo in do_plusmail of '0' instead of '\0' (Issue 90).
+ -- @email - Unnecessary strlen() (Issue 81).
 
 
 Performance Enhancements:
